Fix #18459 - [SECU] Add SpEL authorized types

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
@@ -101,3 +101,6 @@ becpg.batch.automaticECO.autoMergeBranch.batchSize=1
 #Nutriscore
 beCPG.formulation.score.nutriscore.regulatoryClass=fr.becpg.repo.product.helper.Nutrient5C2021Helper
 
+#Spel
+beCPG.spel.security.authorizedTypes=java.lang.Math,java.lang.String,java.util.Calendar,java.util.Date,java.util.Arrays,fr.becpg.*
+
