Fix #20640 - [Feature] Add SVHC List support

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
@@ -171,6 +171,7 @@ path.supplier_hierarchy                  = Hierarchy of suppliers
 path.supplierdocuments                   = Supplier documents
 path.supplierentities                    = Supplier entities
 path.suppliers                           = Suppliers
+path.svhcreasonsforinclusions            = Svhc reasons for inclusions
 path.targetmarkets                       = Target Markets
 path.tradeitemtradechannel               = Distribution channels
 path.tradeitemunitdescriptorcode         = Types of business unit
