--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -36,6 +36,7 @@ bcpg_bcpgmodel.aspect.bcpg_supplierAspect.description                     = Supp
 bcpg_bcpgmodel.aspect.bcpg_supplierAspect.title                           = Supplier
 bcpg_bcpgmodel.aspect.bcpg_suppliersAspect.description                    = For products purchased from a supplier
 bcpg_bcpgmodel.aspect.bcpg_suppliersAspect.title                          = Suppliers
+bcpg_bcpgmodel.aspect.bcpg_svhcAspect.title                               = Substances of very high concerns
 bcpg_bcpgmodel.aspect.bcpg_transformationAspect.description               = Transformation aspect
 bcpg_bcpgmodel.aspect.bcpg_transformationAspect.title                     = Transformation aspect
 bcpg_bcpgmodel.aspect.bcpg_undeletableAspect.description                  = Undeletable aspect
@@ -126,6 +127,7 @@ bcpg_bcpgmodel.association.bcpg_subsidiaryRef.title                       = Subs
 bcpg_bcpgmodel.association.bcpg_supplierAccountRef.title                  = Supplier accounts
 bcpg_bcpgmodel.association.bcpg_supplierPlants.title                      = Supplier plants
 bcpg_bcpgmodel.association.bcpg_suppliers.title                           = Suppliers
+bcpg_bcpgmodel.association.bcpg_svhcListIng.title                         = Substance
 bcpg_bcpgmodel.association.bcpg_targetReconstitutionRef.title             = Reconstituted ingredient
 bcpg_bcpgmodel.association.bcpg_trademarkRef.description                  = Trademark
 bcpg_bcpgmodel.association.bcpg_trademarkRef.title                        = Trademark
@@ -287,6 +289,7 @@ bcpg_bcpgmodel.property.bcpg_irlSources.title                             = Sour
 bcpg_bcpgmodel.property.bcpg_irlUsages.title                              = Usages
 bcpg_bcpgmodel.property.bcpg_isCharactPropagateUp.title                   = Propagate
 bcpg_bcpgmodel.property.bcpg_isIngListManual.title                        = Is ingredient list manual?
+bcpg_bcpgmodel.property.bcpg_isSubstanceOfVeryHighConcern.title           = SVHC
 bcpg_bcpgmodel.property.bcpg_labelClaimCode.title                         = Code
 bcpg_bcpgmodel.property.bcpg_labelClaimFormula.title                      = Formula
 bcpg_bcpgmodel.property.bcpg_labelClaimRegulatoryThreshold.title          = Regulatory threshold (%)
@@ -479,6 +482,9 @@ bcpg_bcpgmodel.property.bcpg_supplierRefCode.title                        = Supp
 bcpg_bcpgmodel.property.bcpg_supplierState.title                          = State of supplier
 bcpg_bcpgmodel.property.bcpg_supplierTel.description                      = Phone company
 bcpg_bcpgmodel.property.bcpg_supplierTel.title                            = Phone
+bcpg_bcpgmodel.property.bcpg_svhcListMigrationPerc.title                  = Migration (%)
+bcpg_bcpgmodel.property.bcpg_svhcListQtyPerc.title                        = Quantity (%)
+bcpg_bcpgmodel.property.bcpg_svhcReasonsForInclusion.title                = SVHC type
 bcpg_bcpgmodel.property.bcpg_trademarkType.title                          = Type
 bcpg_bcpgmodel.property.bcpg_unitPrice.title                              = Selling price per sales unit
 bcpg_bcpgmodel.property.bcpg_unitTotalCost.title                          = Cost per sales unit
@@ -612,6 +618,8 @@ bcpg_bcpgmodel.type.bcpg_subsidiary.description                           = Subs
 bcpg_bcpgmodel.type.bcpg_subsidiary.title                                 = Subsidiary
 bcpg_bcpgmodel.type.bcpg_supplier.description                             = Supplier
 bcpg_bcpgmodel.type.bcpg_supplier.title                                   = Supplier
+bcpg_bcpgmodel.type.bcpg_svhcList.description                             = Substances of very hight concerns
+bcpg_bcpgmodel.type.bcpg_svhcList.title                                   = Dangerous substances
 bcpg_bcpgmodel.type.bcpg_trademark.description                            = Trademark
 bcpg_bcpgmodel.type.bcpg_trademark.title                                  = Trademark
 
