--- a/becpg-plm/becpg-plm-core/pom.xml
+++ b/becpg-plm/becpg-plm-core/pom.xml
@@ -6,7 +6,7 @@
 	    <version>23.1.0</version>
 		<relativePath>../../</relativePath>
 	</parent>
-	<version>23.1.0.2-SNAPSHOT</version>
+	<version>23.1.0.2</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-plm-core</artifactId>
 	<packaging>jar</packaging>
@@ -168,4 +168,8 @@
 			</plugin>
 		</plugins>
 	</build>
+
+  <scm>
+    <tag>23.1.0.2</tag>
+  </scm>
 </project>
