--- a/becpg-integration-runner/pom.xml
+++ b/becpg-integration-runner/pom.xml
@@ -14,7 +14,7 @@
 		<version>23.1.0</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>23.1.0.2</version>
+    <version>23.1.0.3-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
 			<groupId>fr.becpg</groupId>
@@ -441,8 +441,4 @@
 			</build>
 		</profile>
 	</profiles>
-
-  <scm>
-    <tag>23.1.0.2</tag>
-  </scm>
 </project>
