Fix #21036 - [Feature] Improve version cleaner, add max processed node property to system configuration

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/becpg-config-core.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/becpg-config-core.properties
@@ -86,6 +86,7 @@ beCPG.notification.notify.cronExpression=0 0 4 * * ?
 #Version cleaner
 beCPG.version.cleaner.enabled=true
 beCPG.version.cleaner.cronExpression=0 0 * ? * *
+beCPG.version.cleaner.maxProcessedNodes=500
 
 #Report
 # 1048576 bytes = 1mB
