InProgress #10243 - [Feature] Add becpg-ai connector proxy

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/groups.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/groups.properties
@@ -1,4 +1,5 @@
 
+becpg.group.aiuser                    = beCPG AI Users
 becpg.group.externaluser              = beCPG External Users
 becpg.group.externalusermgr           = beCPG External Users Managers
 becpg.group.languagemgr               = beCPG Language managers
