--- a/becpg-share/pom.xml
+++ b/becpg-share/pom.xml
@@ -60,12 +60,12 @@
             <classifier>classes</classifier>
             <scope>provided</scope>
        </dependency> 
-       <dependency>
-		    <groupId>javax.websocket</groupId>
-		    <artifactId>javax.websocket-api</artifactId>
-		    <version>1.0</version>
+      <dependency>
+		    <groupId>jakarta.websocket</groupId>
+		    <artifactId>jakarta.websocket-api</artifactId>
+		    <version>2.0.0</version>
 		    <scope>provided</scope>
-	   </dependency>
+		</dependency>
 	 
 	</dependencies>
 	<build>
