--- a/becpg-plm/becpg-plm-share/pom.xml
+++ b/becpg-plm/becpg-plm-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>4.2.3</version>
 		<relativePath>../../</relativePath>
 	</parent>
-    <version>4.2.3.62-SNAPSHOT</version>
+    <version>4.2.3.62</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-plm-share</artifactId>
 	<packaging>jar</packaging>
@@ -38,4 +38,8 @@
             </plugin>
 		</plugins>
 	</build>
+
+  <scm>
+    <tag>4.2.3.62</tag>
+  </scm>
 </project>
