Fix #20640 - [Feature] Add SVHC List support

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -619,8 +619,8 @@ bcpg_bcpgmodel.type.bcpg_subsidiary.description                           = Subs
 bcpg_bcpgmodel.type.bcpg_subsidiary.title                                 = Subsidiary
 bcpg_bcpgmodel.type.bcpg_supplier.description                             = Supplier
 bcpg_bcpgmodel.type.bcpg_supplier.title                                   = Supplier
-bcpg_bcpgmodel.type.bcpg_svhcList.description                             = List of substances of very high concerns
-bcpg_bcpgmodel.type.bcpg_svhcList.title                                   = Substances of very high concerns
+bcpg_bcpgmodel.type.bcpg_svhcList.description                             = Substances of very hight concerns
+bcpg_bcpgmodel.type.bcpg_svhcList.title                                   = Dangerous substances
 bcpg_bcpgmodel.type.bcpg_trademark.description                            = Trademark
 bcpg_bcpgmodel.type.bcpg_trademark.title                                  = Trademark
 
