--- a/becpg-plm/becpg-plm-share/pom.xml
+++ b/becpg-plm/becpg-plm-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.1.0</version>
 		<relativePath>../../</relativePath>
 	</parent>
-	<version>23.1.0.4-SNAPSHOT</version>
+	<version>23.1.0.4</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-plm-share</artifactId>
 	<packaging>jar</packaging>
@@ -38,4 +38,8 @@
             </plugin>
 		</plugins>
 	</build>
+
+  <scm>
+    <tag>23.1.0.4</tag>
+  </scm>
 </project>
