--- a/becpg-designer/becpg-designer-share/pom.xml
+++ b/becpg-designer/becpg-designer-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.1.0</version>
 		<relativePath>../../</relativePath>
 	</parent>
-    <version>23.1.0.5-SNAPSHOT</version>
+    <version>23.1.0.5</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-designer-share</artifactId>
 	<packaging>jar</packaging>
@@ -59,4 +59,8 @@
           </dependency>
 
 	</dependencies>
+
+  <scm>
+    <tag>23.1.0.5</tag>
+  </scm>
 </project>
