--- a/becpg-project/becpg-project-core/pom.xml
+++ b/becpg-project/becpg-project-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.1.0</version>
 		<relativePath>../../</relativePath>
 	</parent>
-	<version>23.1.0.5</version>
+	<version>23.1.0.6-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-project-core</artifactId>
 	<packaging>jar</packaging>
@@ -63,8 +63,4 @@
             </plugin>
 		</plugins>
 	</build>
-
-  <scm>
-    <tag>23.1.0.5</tag>
-  </scm>
 </project>
