--- a/becpg-integration-runner/pom.xml
+++ b/becpg-integration-runner/pom.xml
@@ -14,7 +14,7 @@
 		<version>4.2.1</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>4.2.1.9</version>
+    <version>4.2.1.10-SNAPSHOT</version>
 
 	<dependencies>
 		<dependency>
@@ -529,8 +529,4 @@
 			</build>
 		</profile>
 	</profiles>
-
-  <scm>
-    <tag>4.2.1.9</tag>
-  </scm>
 </project>
