--- a/becpg-project/becpg-project-share/pom.xml
+++ b/becpg-project/becpg-project-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>4.2.1</version>
 		<relativePath>../../</relativePath>
 	</parent>
-    <version>4.2.1.9</version>
+    <version>4.2.1.10-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-project-share</artifactId>
 	<packaging>jar</packaging>
@@ -38,8 +38,4 @@
             </plugin>
 		</plugins>
 	</build>
-
-  <scm>
-    <tag>4.2.1.9</tag>
-  </scm>
 </project>
