--- a/becpg-integration-runner/pom.xml
+++ b/becpg-integration-runner/pom.xml
@@ -14,7 +14,7 @@
 		<version>23.1.0</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>23.1.0.7</version>
+    <version>23.1.0.8-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
 			<groupId>fr.becpg</groupId>
@@ -443,6 +443,6 @@
 	</profiles>
 
   <scm>
-    <tag>23.1.0.7</tag>
+    <tag>23.1.0.6</tag>
   </scm>
 </project>
