--- a/becpg-plm/becpg-plm-share/pom.xml
+++ b/becpg-plm/becpg-plm-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.2.0</version>
 		<relativePath>../../</relativePath>
 	</parent>
-	<version>23.2.0.0-SNAPSHOT</version>
+	<version>23.2.0.0</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-plm-share</artifactId>
 	<packaging>jar</packaging>
@@ -39,4 +39,8 @@
 		</plugins>
 	</build>
 
+
+  <scm>
+    <tag>23.2.0.0</tag>
+  </scm>
 </project>
