Fix #20597 - [I18N] Rename conditioning labels

--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport.properties
@@ -447,7 +447,7 @@ palletLayers = Number of layer/pallet
 
 parameters = Parameters
 
-pcb = Number of product/box
+pcb = Number of product/case
 
 perServing = Per serving
 
