--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/surveyModel.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/surveyModel.properties
@@ -2,12 +2,14 @@
 survey_surveymodel.association.survey_nextQuestion.title      = Next question
 survey_surveymodel.association.survey_slChoices.title         = Selected choices
 survey_surveymodel.association.survey_slQuestion.title        = Question
+survey_surveymodel.property.pjt_slCriterion.title             = Criterion
 survey_surveymodel.property.survey_questionIsMandatory.title  = Mandatory ?
 survey_surveymodel.property.survey_questionIsVisible.title    = Visible ?
 survey_surveymodel.property.survey_questionLabel.title        = Label
 survey_surveymodel.property.survey_questionLowerNote.title    = Lower note
 survey_surveymodel.property.survey_questionNote.title         = Note
 survey_surveymodel.property.survey_questionScore.title        = Score
+survey_surveymodel.property.survey_questionType.title         = Evaluation criterias
 survey_surveymodel.property.survey_questionUpperNote.title    = Upper note
 survey_surveymodel.property.survey_questionUrl.title          = Url
 survey_surveymodel.property.survey_responseCommentLabel.title = Comment label
