[Setup] Increase SOLR Timeout

--- a/becpg-integration-runner/src/main/docker/becpg-base-core/becpg/classes/alfresco-global.properties
+++ b/becpg-integration-runner/src/main/docker/becpg-base-core/becpg/classes/alfresco-global.properties
@@ -161,7 +161,8 @@ solr.backup.alfresco.remoteBackupLocation=/opt/alfresco-search-services/data/sol
 solr.backup.archive.remoteBackupLocation=/opt/alfresco-search-services/data/solr6Backup/archive
 solr.backup.alfresco.numberToKeep=1
 solr.backup.archive.numberToKeep=1
-solr.http.socket.timeout=10000
+solr.http.socket.timeout=20000
+solr.http.connection.timeout=1000
 
 
 #Ignore empty file for policy
