Fix #17671 - [Feature] Update glop url

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
@@ -90,7 +90,7 @@ beCPG.decernis.serverUrl=https://formula.decernis.com/api
 beCPG.decernis.analysisUrl=https://api.decernis.com/v5
 
 #Glop
-beCPG.glop.serverUrl=http://becpg-glop/compute
+beCPG.glop.serverUrl=http://becpg-ai/api/glop/compute
 
 
 #Batches
