--- a/becpg-core/pom.xml
+++ b/becpg-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.2.0</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>23.2.0.4</version>
+    <version>23.2.0.5-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-core</artifactId>
 	<packaging>jar</packaging>
@@ -113,8 +113,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-  <scm>
-    <tag>23.2.0.4</tag>
-  </scm>
 </project>
