--- a/becpg-project/becpg-project-share/pom.xml
+++ b/becpg-project/becpg-project-share/pom.xml
@@ -7,7 +7,7 @@
 		<relativePath>../../</relativePath>
 	</parent>
     <modelVersion>4.0.0</modelVersion>
-    <version>23.2.0.4</version>
+    <version>23.2.0.5-SNAPSHOT</version>
 	<artifactId>becpg-project-share</artifactId>
 	<packaging>jar</packaging>
 	<name>beCPG Project Share</name>
@@ -38,8 +38,4 @@
             </plugin>
 		</plugins>
 	</build>
-
-  <scm>
-    <tag>23.2.0.4</tag>
-  </scm>
 </project>
