--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
@@ -45,7 +45,7 @@ beCPG.formulation.specification.enabled=true
 beCPG.formulation.specification.cron=0 0 23 * * ?
 beCPG.formulation.reqCtrlList.maxRclSourcesToKeep=-1
 beCPG.formulation.reqCtrlList.addChildRclSources=true
-
+beCPG.formulation.security.enforceACL=false
 
 #Currency Constraint
 beCPG.currency.supported=\u20AC,$,\u00A3,SFr,z\u0142,kr,R$,$ CA
