--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration.properties
@@ -27,6 +27,7 @@ beCPG.formulation.costList.keepProductUnit.description         = Allows you to s
 beCPG.formulation.ingsCalculatingWithYield.description         = Allows you to specify whether yield should be taken into account when calculating ingredients
 beCPG.formulation.nutList.propagateUpEnable.description        = Allows you to define whether the nutrients propagate from the composition
 beCPG.formulation.score.nutriscore.regulatoryClass.description = Allows you to specify the Java class used for calculating the nutrient score
+beCPG.formulation.security.enforceACL                          = Allows you to define whether security rules should apply access rights to lists when formulating
 beCPG.formulation.specification.addInfoReqCtrl.description     = Allows you to specify whether informational type specification requirements should be added to the product
 beCPG.multilinguale.disabledMLTextFields.description           = Allows you to deactivate multilanguages \u200B\u200Bfor certain fields. You can specify the relevant fields by separating them with commas
 beCPG.multilinguale.disabledMLTextFields.readonly              = true
