Fix #21706 - [Feature] Add enforceACL system property

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
@@ -43,6 +43,7 @@ beCPG.formulation.costList.keepProductUnit=false
 beCPG.formulation.specification.addInfoReqCtrl=false
 beCPG.formulation.specification.enabled=true
 beCPG.formulation.specification.cron=0 0 23 * * ?
+beCPG.formulation.security.enforceACL=false
 
 #Currency Constraint
 beCPG.currency.supported=\u20AC,$,\u00A3,SFr,z\u0142,kr,R$,$ CA
