Fix #21706 - [Feature] Add supplierPermission system property

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
@@ -47,6 +47,9 @@ beCPG.formulation.reqCtrlList.maxRclSourcesToKeep=-1
 beCPG.formulation.reqCtrlList.addChildRclSources=true
 beCPG.formulation.security.enforceACL=false
 
+#Security
+beCPG.security.supplierPermission=Coordinator
+
 #Currency Constraint
 beCPG.currency.supported=\u20AC,$,\u00A3,SFr,z\u0142,kr,R$,$ CA
 
