Fix #18331 - [Feature] Add remote rate limiter

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/becpg-config-core.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/becpg-config-core.properties
@@ -65,6 +65,10 @@ beCPG.remoteUser=admin
 beCPG.remotePwd=becpg
 beCPG.remoteServer=http://localhost:8080/alfresco
 
+#Rate limiter maximum 100 requests/seconds
+beCPG.remote.rateLimiter.capacity=100
+beCPG.remote.rateLimiter.refillRate=0.1
+
 #DocLib tree
 becpg.doclibtree.showEntities=false
 
