--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration.properties
@@ -14,6 +14,14 @@ beCPG.datalist.effectiveFilterEnabled.type                     = string
 beCPG.defaultSearchTemplate.description                        = Allows you to set the default search template used by Alfresco
 beCPG.defaultSearchTemplate.readonly                           = true
 beCPG.defaultSearchTemplate.type                               = string
+
+
+beCPG.remote.rateLimiter.capacity.description=Number of simultaneous requests allowed in the remote API.
+beCPG.remote.rateLimiter.capacity.type=Integer
+beCPG.remote.rateLimiter.refillRate.description=Rate at which the token bucket refills for the remote API rate limiter.
+beCPG.remote.rateLimiter.refillRate.type=Double
+
+
 beCPG.eco.automatic.apply.description                          = Allows you to specify whether the automatic change order should be applied
 beCPG.eco.automatic.deleteOnApply.description                  = Allows you to specify whether change orders should be deleted after being applied
 beCPG.eco.automatic.enable.description                         = Enables auto wording, auto merge, and auto change order
