InProgress #21240 - [Feature] Add new GS1 fields

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -107,6 +107,8 @@ gs1_gs1Model.property.gs1_freeQuantityOfProduct.title                           
 gs1_gs1Model.property.gs1_freeQuantityOfProductPercent.title                              = Free quantity (%)
 gs1_gs1Model.property.gs1_freeQuantityOfProductUnit.description                           = The numeric quantity of free items in a combination pack. If the free quantity promotional trade item is simple or is a multi-pack the free quantity is populated. The unit of measure used for the free quantity of next lower level must be the same as the unit of measure of the Net Content of the Child Trade Item
 gs1_gs1Model.property.gs1_freeQuantityOfProductUnit.title                                 = Unit
+gs1_gs1Model.property.gs1_functionalName.description                                      = Describes use of the product or service by the consumer. Should help clarify the product classification associated with the GTIN.
+gs1_gs1Model.property.gs1_functionalName.title                                            = Functional name
 gs1_gs1Model.property.gs1_handlingInstructionsCodes.title                                 = Handling instructions
 gs1_gs1Model.property.gs1_hasBatchNumber.title                                            = Batch number
 gs1_gs1Model.property.gs1_hasDisplayReadyPackaging.description                            = Indicates whether the trade item has a display ready packaging (also referred to as shelf ready packaging or retail ready packaging). A display ready packaging can be exhibited on the floor, a shelf or other location. It may or may not require some modification e.g. to raise a flap. If modifications are necessary, the measurements would be advised for the trade item as prepared for display
