[Bug] Fix missing GS1 codes for geoOrigin

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -275,3 +275,13 @@ gs1_gs1Model.type.gs1_targetMarket.description                                  
 gs1_gs1Model.type.gs1_targetMarket.title                                                  = Target market
 gs1_gs1Model.type.gs1_tradeItemPriceList.description                                      = List of trade item prices
 gs1_gs1Model.type.gs1_tradeItemPriceList.title                                            = Sell prices
+
+listconstraint.gs1_productActivityTypeCodes.ASSEMBLY        = Assembly
+listconstraint.gs1_productActivityTypeCodes.BIRTH           = Birth
+listconstraint.gs1_productActivityTypeCodes.BOTTLING        = Bottling
+listconstraint.gs1_productActivityTypeCodes.CATCH_ZONE      = Catch zone
+listconstraint.gs1_productActivityTypeCodes.FARMING         = Farming
+listconstraint.gs1_productActivityTypeCodes.IMPORTATION     = Importation
+listconstraint.gs1_productActivityTypeCodes.LAST_PROCESSING = Last processing
+listconstraint.gs1_productActivityTypeCodes.MILKING         = Milking
+listconstraint.gs1_productActivityTypeCodes.REARING         = Rearing
