InProgress #21240 - [Feature] Added healthClaimDescription and referencedTradeItem fields

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -17,6 +17,7 @@ gs1_gs1Model.aspect.gs1_organicAspect.title                                     
 gs1_gs1Model.aspect.gs1_packagingAspect.title                                             = Aspect Emballage / Conditionnement GS1
 gs1_gs1Model.aspect.gs1_productActivityDetailsAspect.title                                = Activity details
 gs1_gs1Model.aspect.gs1_promotionalAspect.title                                           = Promotional Aspect
+gs1_gs1Model.aspect.gs1_referencedTradeItemAspect.title                                   = Referenced trade item
 gs1_gs1Model.aspect.gs1_temperatureMeasurementAspect.title                                = Temperature
 gs1_gs1Model.association.gs1_alcoholBeverageContainerRef.description                      = The type of container used for the alcoholic beverage.
 gs1_gs1Model.association.gs1_alcoholBeverageContainerRef.title                            = Alcohol beverage containers
@@ -184,6 +185,8 @@ gs1_gs1Model.property.gs1_percentageOfAlcoholByVolume.title                     
 gs1_gs1Model.property.gs1_percentageOfAlcoholByVolumeMeasurementPrecisionCode.description = Indicates the precision of the measure for the percentage of alcohol by volume on label e.g. Alc. < 0,5 vol.
 gs1_gs1Model.property.gs1_percentageOfAlcoholByVolumeMeasurementPrecisionCode.title       = Percentage of alcohol by volume measurement precision 
 gs1_gs1Model.property.gs1_platformTermsAndConditionsCode.title                            = Reusable pallet support indication
+gs1_gs1Model.property.gs1_healthClaimDescription.description                              = A description of health claims according to regulations of the target market.
+gs1_gs1Model.property.gs1_healthClaimDescription.title                                    = Health claim
 gs1_gs1Model.property.gs1_preparationType.title                                           = Preparation state of the product
 gs1_gs1Model.property.gs1_priceBasisQuantity.title                                        = Quantity
 gs1_gs1Model.property.gs1_priceBasisQuantityUnit.title                                    = Qty unit
@@ -201,6 +204,8 @@ gs1_gs1Model.property.gs1_productionMethodForFishAndSeafoodCode.title           
 gs1_gs1Model.property.gs1_promotionTypeCode.description                                   = Used to identify the different types of free quantity promotional trade items and the nature of the link between the standard trade item and the promotional trade item.
 gs1_gs1Model.property.gs1_promotionTypeCode.title                                         = Promotion Type Code
 gs1_gs1Model.property.gs1_publicationDate.title                                           = Publication date
+gs1_gs1Model.property.gs1_referencedTradeItemEanCode.title                                = Referenced trade item GTIN code
+gs1_gs1Model.property.gs1_referencedTradeItemTypeCode.title                               = Referenced trade item type code
 gs1_gs1Model.property.gs1_rennetTypeCode.description                                      = The type of rennet used for coagulation. The enzyme rennet is used for the coagulation of the cheese mass. Rennet and respectively similar enzymes can be gained through various processes.
 gs1_gs1Model.property.gs1_rennetTypeCode.title                                            = Rennet Type
 gs1_gs1Model.property.gs1_ripeningTimePeriod.description                                  = The period of time for ripening the cheese. During ripening the aroma and consistency of a cheese constantly changes. The character of a cheese is thus strongly determined by the period of ripening. Depending on personal preference, the end consumer prefers either a "young" or a "mature" cheese.
