InProgress #21240 - [Feature] Added season fields

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -18,6 +18,7 @@ gs1_gs1Model.aspect.gs1_packagingAspect.title                                   
 gs1_gs1Model.aspect.gs1_productActivityDetailsAspect.title                                = Activity details
 gs1_gs1Model.aspect.gs1_promotionalAspect.title                                           = Promotional Aspect
 gs1_gs1Model.aspect.gs1_referencedTradeItemAspect.title                                   = Referenced trade item
+gs1_gs1Model.aspect.gs1_seasonalAspect.title                                              = Seasonal aspect
 gs1_gs1Model.aspect.gs1_temperatureMeasurementAspect.title                                = Temperature
 gs1_gs1Model.association.gs1_alcoholBeverageContainerRef.description                      = The type of container used for the alcoholic beverage.
 gs1_gs1Model.association.gs1_alcoholBeverageContainerRef.title                            = Alcohol beverage containers
@@ -210,6 +211,11 @@ gs1_gs1Model.property.gs1_rennetTypeCode.description                            
 gs1_gs1Model.property.gs1_rennetTypeCode.title                                            = Rennet Type
 gs1_gs1Model.property.gs1_ripeningTimePeriod.description                                  = The period of time for ripening the cheese. During ripening the aroma and consistency of a cheese constantly changes. The character of a cheese is thus strongly determined by the period of ripening. Depending on personal preference, the end consumer prefers either a "young" or a "mature" cheese.
 gs1_gs1Model.property.gs1_ripeningTimePeriod.title                                        = Ripening Time Period
+gs1_gs1Model.property.gs1_seasonalAvailabilityEndDateTime.title                           = Seasonal availability end date
+gs1_gs1Model.property.gs1_seasonalAvailabilityStartDateTime.title                         = Seasonal availability start date
+gs1_gs1Model.property.gs1_seasonCalendarYear.title                                        = Season calendar year
+gs1_gs1Model.property.gs1_seasonName.title                                                = Season name
+gs1_gs1Model.property.gs1_seasonParameterCode.title                                       = Season parameter code
 gs1_gs1Model.property.gs1_secondaryAddedFlavouringCode.description                        = The flavouring which has been added to the alcohol product. This is the secondary addition.
 gs1_gs1Model.property.gs1_secondaryAddedFlavouringCode.title                              = Secondary Added Flavouring
 gs1_gs1Model.property.gs1_secondaryDepth.title                                            = Depth (mm)
