--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
@@ -206,6 +206,7 @@ becpg.forms.set.product.name                                   = Product Name
 becpg.forms.set.promotional.label                              = Promotion
 becpg.forms.set.publication.label                              = Publication
 becpg.forms.set.regulatory.label                               = Compliance
+becpg.forms.set.season.label                                   = Season
 becpg.forms.set.secondaryPackaging.label                       = Logistical unit
 becpg.forms.set.security.label                                 = Security
 becpg.forms.set.securityRule.label                             = Security rule
