Fix test logging

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/log4j2.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/log4j2.properties
@@ -157,3 +157,7 @@ logger.LocalFeedGenerator.level=fatal
 
 logger.FeedCleaner.name=org.alfresco.repo.activities.feed.cleanup.FeedCleaner
 logger.FeedCleaner.level=fatal
+
+logger.becpg-test.name=fr.becpg.test
+logger.becpg-test.level=debug
+  
