InProgress #21240 - [Feature] Added pegHole fields

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -15,6 +15,7 @@ gs1_gs1Model.aspect.gs1_marketingAspect.title                                   
 gs1_gs1Model.aspect.gs1_measuresAspect.title                                              = GS1 Aspect Measures
 gs1_gs1Model.aspect.gs1_organicAspect.title                                               = Organic product
 gs1_gs1Model.aspect.gs1_packagingAspect.title                                             = Aspect Emballage / Conditionnement GS1
+gs1_gs1Model.aspect.gs1_pegHoleAspect.title                                               = Peg hole aspect
 gs1_gs1Model.aspect.gs1_productActivityDetailsAspect.title                                = Activity details
 gs1_gs1Model.aspect.gs1_promotionalAspect.title                                           = Promotional Aspect
 gs1_gs1Model.aspect.gs1_referencedTradeItemAspect.title                                   = Referenced trade item
@@ -82,6 +83,10 @@ gs1_gs1Model.property.gs1_cplTurnover.title                                     
 gs1_gs1Model.property.gs1_cplUnitTotalCost.title                                          = Cost
 gs1_gs1Model.property.gs1_dataCarrierTypeCode.description                                 = A code indicating the type of data carrier physically present on the trade item
 gs1_gs1Model.property.gs1_dataCarrierTypeCode.title                                       = Data Carrier Type Code
+gs1_gs1Model.property.gs1_secondaryDataCarrierTypeCode.description                        = A code indicating the type of data carrier physically present on the trade item
+gs1_gs1Model.property.gs1_secondaryDataCarrierTypeCode.title                              = Data Carrier Type Code
+gs1_gs1Model.property.gs1_tertiaryDataCarrierTypeCode.description                         = A code indicating the type of data carrier physically present on the trade item
+gs1_gs1Model.property.gs1_tertiaryDataCarrierTypeCode.title                               = Data Carrier Type Code
 gs1_gs1Model.property.gs1_degreeOfOriginalWort.description                                = Specification of the degrees of original wort.
 gs1_gs1Model.property.gs1_degreeOfOriginalWort.title                                      = Degree of original wort
 gs1_gs1Model.property.gs1_depth.title                                                     = Depth (mm)
@@ -181,6 +186,10 @@ gs1_gs1Model.property.gs1_packagingTermsAndConditionsCode.title                 
 gs1_gs1Model.property.gs1_packagingTypeCode.title                                         = Type of packaging
 gs1_gs1Model.property.gs1_packagingTypeDescription.title                                  = Packaging Type description
 gs1_gs1Model.property.gs1_palletTypeCode.title                                            = Pallet type backing
+gs1_gs1Model.property.gs1_pegHoleNumber.title                                             = Peg hole number
+gs1_gs1Model.property.gs1_pegHoleTypeCode.title                                           = Peg hole type
+gs1_gs1Model.property.gs1_pegHorizontal.title                                             = Peg hole horizontal distance (mm)
+gs1_gs1Model.property.gs1_pegVertical.title                                               = Peg hole vertical distance (mm)
 gs1_gs1Model.property.gs1_percentageOfAlcoholByVolume.description                         = Percentage of alcohol contained in the base unit trade item.
 gs1_gs1Model.property.gs1_percentageOfAlcoholByVolume.title                               = Percentage of alcohol by volume (%)
 gs1_gs1Model.property.gs1_percentageOfAlcoholByVolumeMeasurementPrecisionCode.description = Indicates the precision of the measure for the percentage of alcohol by volume on label e.g. Alc. < 0,5 vol.
