--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
@@ -195,6 +195,7 @@ becpg.forms.set.packSorting.label                              = Sorting and mar
 becpg.forms.set.packaging-description.label                    = Description of packaging
 becpg.forms.set.packaging.label                                = Packing / Packaging
 becpg.forms.set.pallet.label                                   = Pallet
+becpg.forms.set.pegHole.label                                  = Peg holes
 becpg.forms.set.physicoChems-criteria.label                    = Criteria on physico-chemicals
 becpg.forms.set.primaryPackaging.label                         = Packaging of product
 becpg.forms.set.product-criteria.label                         = Product Criteria
