--- a/becpg-designer/becpg-designer-core/pom.xml
+++ b/becpg-designer/becpg-designer-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.2.0</version>
 		<relativePath>../../</relativePath>
 	</parent>
-	<version>23.2.0.10</version>
+	<version>23.2.0.11-SNAPSHOT</version>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-designer-core</artifactId>
 	<packaging>jar</packaging>
@@ -64,8 +64,4 @@
             </plugin>
 		</plugins>
 	</build>
-
-  <scm>
-    <tag>23.2.0.10</tag>
-  </scm>
 </project>
