--- a/becpg-integration-runner/src/main/docker/becpg-test-core/alfresco/hotswap-agent.properties
+++ b/becpg-integration-runner/src/main/docker/becpg-test-core/alfresco/hotswap-agent.properties
@@ -1,7 +1,7 @@
 # Enable hotswap so that changes in this module will be automatically reloaded
 # Watch for changed class files on watchResources path and reload class definition in the running application.
 autoHotswap=true
-#autoHotswap.port=8000
+autoHotswap.port=8888
 
 # Add a directory prior to application classpath (load classes and resources).
 #
@@ -42,6 +42,7 @@ webappDir=/usr/local/tomcat/hotswap-agent/becpg-core/target/classes/META-INF/res
 # in src/main/resources, the new changed resource is served instead.
 # watchResources=
 
+LOGGER=INFO
 LOGGER.org.hotswap.agent=INFO
 #LOGGER.org.hotswap.agent.plugin=TRACE
 #LOGGER.org.hotswap.agent.watch=TRACE
