InProgress #21240 - [Feature] Added more fields

--- a/.settings/org.sonarlint.eclipse.core.prefs
+++ b/.settings/org.sonarlint.eclipse.core.prefs
@@ -3,5 +3,5 @@ bindingSuggestionsDisabled=true
 eclipse.preferences.version=1
 idePrefixKey=
 projectKey=fr.becpg\:becpg-parent
-serverId=sonar.becpg.fr
+#serverId=sonar.becpg.fr
 sqPrefixKey=
