--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -157,6 +157,7 @@ gs1_gs1Model.property.gs1_isTradeItemPackedIrregularly.description              
 gs1_gs1Model.property.gs1_isTradeItemPackedIrregularly.title                              = Is Trade Item Packed Irregularly
 gs1_gs1Model.property.gs1_isTradeItemReorderable.description                              = This element is an indicator that selected styles or trade items may or may not be re-ordered. It does not imply any information on current availability
 gs1_gs1Model.property.gs1_isTradeItemReorderable.title                                    = Is Trade Item Reorderable
+gs1_gs1Model.property.gs1_isTradeItemSeasonal.title                                       = Is Trade Item Seasonal
 gs1_gs1Model.property.gs1_lastShipDateTime.description                                    = Indicates the latest date (and time) that the trade item can be shipped. This is independent of any specific ship-from location.
 gs1_gs1Model.property.gs1_lastShipDateTime.title                                          = Last Ship Date Time
 gs1_gs1Model.property.gs1_maximumTemperature.title                                        = Maximum temperature
@@ -232,6 +233,8 @@ gs1_gs1Model.property.gs1_secondaryDiameter.title                               
 gs1_gs1Model.property.gs1_secondaryHeight.title                                           = Height (mm)
 gs1_gs1Model.property.gs1_secondaryNetWeight.title                                        = Net weight case (kg)
 gs1_gs1Model.property.gs1_secondaryPackagingTypeCode.title                                = Type of logistical unit
+gs1_gs1Model.property.gs1_secondaryStackingFactor.title                                   = Number of pallets on ground (stacking)
+gs1_gs1Model.property.gs1_secondaryStackingMaxWeight.title                                = Stacking maximum weight (kg)
 gs1_gs1Model.property.gs1_secondaryWeight.title                                           = Gross weight case (kg)
 gs1_gs1Model.property.gs1_secondaryWidth.title                                            = Width (mm)
 gs1_gs1Model.property.gs1_sellingUnitOfMeasure.description                                = Describes the measurement used for selling unit of the trade item to the end consumer. A trade item may have only one unit of measure
@@ -243,6 +246,8 @@ gs1_gs1Model.property.gs1_specialItemCode.description                           
 gs1_gs1Model.property.gs1_specialItemCode.title                                           = Special Item Code
 gs1_gs1Model.property.gs1_speciesForFisheryStatisticsPurposesCode.title                   = Fish species
 gs1_gs1Model.property.gs1_speciesForFisheryStatisticsPurposesName.title                   = Designation
+gs1_gs1Model.property.gs1_stackingFactor.title                                            = Number of pallets on ground (stacking)
+gs1_gs1Model.property.gs1_stackingMaxWeight.title                                         = Stacking maximum weight (kg)
 gs1_gs1Model.property.gs1_startAvailabilityDateTime.title                                 = Start date of availability to order
 gs1_gs1Model.property.gs1_storageStateCode.title                                          = Storage state
 gs1_gs1Model.property.gs1_surfaceOfCheeseAtEndOfRipeningCode.description                  = The representation of whether or not a cheese contains a rind at the end of the maturing process. A Rind is the outside shell of cheese that forms during the cheese making process. Rinds are natural and usually edible, as opposed to other coverings, such as wax and cloth that are inedible.
