--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model.properties
@@ -18,6 +18,9 @@ aspect.gs1_cheeseInformationAspect       = Cheese aspect
 aspect.gs1_gs1Aspect                     = GS1 aspect
 aspect.gs1_innerPackAspect               = Inner pack aspect
 aspect.gs1_organicAspect                 = Organic product
+aspect.gs1_pegHoleAspect                 = Peg hole aspect
+aspect.gs1_referencedTradeItemAspect     = Referenced trade item
+aspect.gs1_seasonalAspect                = Seasonal aspect
 aspect.gs1_temperatureMeasurementAspect  = Temperature
 aspect.pack_labelingAspect               = Labeling
 aspect.pack_palletAspect                 = Pallet
