Fix #22199 - [Bug] Authorize DecimalFormat in Spel formula

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
@@ -104,7 +104,7 @@ becpg.batch.automaticECO.autoMergeBranch.workerThreads=3
 becpg.batch.automaticECO.autoMergeBranch.batchSize=1
 
 #Spel
-beCPG.spel.security.authorizedTypes=java.lang.Math,java.lang.String,java.util.Calendar,java.util.Date,java.util.Arrays,fr.becpg.*,java.math.RoundingMode,java.lang.text.DecimalFormat
+beCPG.spel.security.authorizedTypes=java.lang.Math,java.lang.String,java.util.Calendar,java.util.Date,java.util.Arrays,fr.becpg.*,java.math.RoundingMode,java.text.SimpleDateFormat,java.text.DecimalFormat
 
 #Nutriscore
 beCPG.formulation.score.nutriscore.regulatoryClass=fr.becpg.repo.product.helper.Nutrient5C2023Helper
